k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: movie-app
  labels:
    app: movie-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: movie-app
  template:
    metadata:
      labels:
        app: movie-app
    spec:
      imagePullSecrets:
        - name: docker-registry-secret
      containers:
        - name: movie-app
          image: IMAGE_PLACEHOLDER
          imagePullPolicy: Always
          ports:
            - containerPort: 80
  tolerations:
      - key: "resource"
        operator: "Equal"
        value: "low"
        effect: "NoSchedule"
        
      # 2. FORCE it to run on AMD hardware (Optional, if you only want it there)
  nodeSelector:
    kubernetes.io/arch: amd64
